Add Some Funtionalities for the Cart